--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,9 +4,9 @@ spring.datasource.password=123
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 
 spring.thymeleaf.cache=false
-server.port=8080
+server.port=8082
 # JPA/Hibernate
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 logging.level.org.hibernate.SQL=debug
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
